Updated: page reloading issues and make the code more readable.

--- a/src/app/Components/BookStore/book-store/book-store.component.scss
+++ b/src/app/Components/BookStore/book-store/book-store.component.scss
@@ -170,12 +170,8 @@ select{
     flex-direction: row;
     cursor: pointer;
 }
-.cart-logo {
-    top: 19px;
-    left: 1166px;
-    width: 20px;
-    height: 21px;
-    opacity: 1;
+button{
+    cursor: pointer;
 }
 .cart-text {
     top: 23px;
